[REF] Unificate files
